--- a/p8105_hw3_hz2710.Rmd
+++ b/p8105_hw3_hz2710.Rmd
@@ -36,19 +36,26 @@ instacart = instacart
 ```
 
 
-## Problem 1
+## Problem 1 
 
 The goal is to do some exploration of this dataset. 
 
-* The dataset has `r nrow(instacart)` rows and `r ncol(instacart)` columns, including of `r colnames(instacart)` variables. 
-* For example, we can see the first row shows that an item shopped in an order with id is 1, id of the product is 49302, the first item added in the cart was reordered the first time by a user with id 112108. It was the 4th time for this user. He bought the product at the 10th hour of the day on Thursday. Since the last order, it had been 9 days. The product name is 'Bulgarian Yogurt'. The aisle id and name is 120 and 'yogurt'. The department id and name is 16 and 'dairy eggs'.
+* **Size and key variables of the dataset** 
+The dataset has `r nrow(instacart)` rows and `r ncol(instacart)` columns, including of `r colnames(instacart)` variables. 
+The key variables are `product_name`, `aisle`, `reordered`
+
+* **Illustrative example**
 `r instacart[1,] %>% knitr::kable()`
+Take the first row as an example, we can see the first row shows that an item shopped in an order with id is 1, id of the product is 49302, the first item added in the cart was reordered the first time by a user with id 112108. It was the 4th time for this user. He bought the product at the 10th hour of the day on Thursday. Since the last order, it had been 9 days. The product name is 'Bulgarian Yogurt'. The aisle id and name is 120 and 'yogurt'. The department id and name is 16 and 'dairy eggs'.
+
+
+* **Answer questions**
 
 * There are `r length(unique(pull(instacart, aisle)))` aisles here, and the most items ordered from `r names(tail(sort(table(pull(instacart, aisle))),1))`. Fresh vegetables are common and necessary supplies.
 
 * A plot that shows the number of items ordered in each aisle, limiting this to aisles with more than 10000 items ordered. 
 ```{r}
-plot1 =
+aisle_plot =
   instacart %>%
   group_by(aisle) %>%
   mutate(
@@ -57,12 +64,13 @@ plot1 =
   filter(aisle_count > 10000) %>%
   ggplot(aes(x = aisle)) +
     geom_bar() + 
-    labs(x = "aisle", y = "aisle count", title = "Counts of aisle") 
+    scale_x_discrete(guide = guide_axis(angle = 90)) +
+    labs(x = "Aisle", y = "Aisle count", title = "Counts of aisle") 
 
-plot1
+aisle_plot
 ```
 
-* A table showing the three most popular items in each of the aisles “baking ingredients”, “dog food care”, and “packaged vegetables fruits”. Include the number of times each item is ordered in your table.
+* A table showing the three most popular items in each of the aisles “baking ingredients”, “dog food care”, and “packaged vegetables fruits”. 
 
 ```{r}
 pop_items = 
@@ -70,30 +78,42 @@ pop_items =
   filter(
     aisle %in% c("baking ingredients","dog food care","packaged vegetables fruits")
   ) %>%
-  group_by(aisle) %>%
-  count(product_name,name = "product_count") %>%
-  top_n(3) %>%
-  knitr::kable()
-
-
-
-instacart %>%
-  filter(
-    aisle %in% c("baking ingredients","dog food care","packaged vegetables fruits")
-  ) %>%
   group_by(aisle,product_name) %>%
-  summarize(product_count = length(product_name)) %>%
+  summarise(product_count = length(product_name)) %>%
   mutate(
-    product_count = order(product_count, decreasing = TRUE),
-    product_rank_within_aisle = rank(product_count)
+    product_rank = order(order(product_count, decreasing = TRUE)),
   ) %>%
-  filter(product_rank_within_aisle <= 3) %>%
-  select(-product_rank_within_aisle) %>%
-  knitr::kable()
-
-  
+  filter(product_rank <= 3) %>%
+  select(-product_rank) %>%
+  knitr::kable(caption = "Three most popular items in the aisles")
 ```
 
 
-Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week; format this table for human readers (i.e. produce a 2 x 7 table).
+* A table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week.
+
+```{r}
+mean_hour = 
+  instacart %>%
+  filter(
+    product_name %in% c("Pink Lady Apples", "Coffee Ice Cream")
+  ) %>%
+  group_by(product_name,order_dow) %>%
+  summarise(mean_order_hour = mean(order_hour_of_day)) %>%
+  mutate(
+    order_dow = case_when(
+      order_dow == 0 ~ "Monday",
+      order_dow == 1 ~ "Tuesday",
+      order_dow == 2 ~ "Wednesday",
+      order_dow == 3 ~ "Thursday",
+      order_dow == 4 ~ "Friday",
+      order_dow == 5 ~ "Saturday",
+      order_dow == 6 ~ "Sunday",
+    )
+  ) %>%
+  pivot_wider(names_from = order_dow,
+              values_from = mean_order_hour) %>%
+  knitr::kable(caption = "Mean hour of the day at which PLA and CIC were ordered on each day of the week")
+```
+
+
 
