--- a/p8105_hw3_hz2710.md
+++ b/p8105_hw3_hz2710.md
@@ -73,7 +73,7 @@ pop_items =
     aisle %in% c("baking ingredients","dog food care","packaged vegetables fruits")
   ) %>%
   group_by(aisle,product_name) %>%
-  summarise(product_count = length(product_name)) %>%
+  summarize(product_count = length(product_name)) %>%
   mutate(
     product_rank = order(order(product_count, decreasing = TRUE)),
   ) %>%
@@ -94,7 +94,7 @@ mean_hour =
     product_name %in% c("Pink Lady Apples", "Coffee Ice Cream")
   ) %>%
   group_by(product_name,order_dow) %>%
-  summarise(mean_order_hour = mean(order_hour_of_day)) %>%
+  summarize(mean_order_hour = mean(order_hour_of_day)) %>%
   mutate(
     order_dow = case_when(
       order_dow == 0 ~ "Monday",
@@ -112,3 +112,105 @@ mean_hour =
 ```
 
     ## `summarise()` has grouped output by 'product_name'. You can override using the `.groups` argument.
+
+## Problrm 2
+
+Load the data
+
+``` r
+data("brfss_smart2010")
+brfss = brfss_smart2010
+```
+
+-   **Data cleaning**
+
+``` r
+brfss = 
+  brfss %>%
+  janitor::clean_names() %>%
+  rename(
+    state = locationabbr,
+    location = locationdesc
+  ) %>%
+  filter(topic == "Overall Health" & response %in% c("Excellent","Very good","Good","Fair","Poor")) %>%
+  mutate(
+    response = factor(response, levels = c("Excellent","Very good","Good","Fair","Poor"))
+  )
+```
+
+-   **Answer the question**
+
+``` r
+brfss_2002 = 
+  brfss %>%
+  filter(year == 2002) %>%
+  group_by(state,location) %>%
+  summarize() %>%
+  summarize(observed_time = n()) %>%
+  filter(observed_time >= 7) %>%
+  select(state,observed_time)
+```
+
+    ## `summarise()` has grouped output by 'state'. You can override using the `.groups` argument.
+
+-   In 2002, CT, FL, MA, NC, NJ, PA states were observed at 7 or more
+    locations.
+
+``` r
+brfss_2010 = 
+  brfss %>%
+  filter(year == 2010) %>%
+  group_by(state,location) %>%
+  summarize() %>%
+  summarize(observed_time = n()) %>%
+  filter(observed_time >= 7) %>%
+  select(state,observed_time)
+```
+
+    ## `summarise()` has grouped output by 'state'. You can override using the `.groups` argument.
+
+-   In 2010, CA, CO, FL, MA, MD, NC, NE, NJ, NY, OH, PA, SC, TX, WA
+    states were observed at 7 or more locations.
+
+``` r
+excellent = 
+  brfss %>%
+  filter(response == "Excellent") %>%
+  select(c("year","state","data_value")) %>%
+  group_by(state,year) %>%
+  mutate(mean_value = mean(data_value, na.rm = TRUE)) %>%
+  select(-c(data_value)) %>%
+  unique()
+
+excellent_plot = 
+  excellent %>%
+  ggplot(aes(x = year, y = mean_value, color = state)) +
+  geom_line() +
+  labs(x = "Year", y = "Mean data value", title = "Average value over time")
+
+excellent_plot
+```
+
+<img src="p8105_hw3_hz2710_files/figure-gfm/unnamed-chunk-9-1.png" width="90%" />
+
+-   The trend of the average value over time among these state is
+    decreasing during the first 4 years and the gradually rising. The
+    range is from about 15 to 30 exclude that the mean value of WY state
+    in 2005 was extremely low.
+
+``` r
+brfss %>%
+  filter(year %in% c(2006,2010) & state == "NY") %>%
+  
+  ggplot(aes(x = response, y = data_value)) +
+  geom_point() +
+  facet_grid(. ~year) +
+  labs(x = "Response", y = "Data value", title = "Data_value for responses")
+```
+
+<img src="p8105_hw3_hz2710_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" />
+
+-   In NY, the distribution of data value in 2006 is similar as in 2010.
+    The range of the group “Excellent”, “Poor” and “Good” keeps same.
+    The group “Very good” and the group “Fair” have a larger variation
+    in 2010 compared to 2006.
