--- a/p8105_hw3_hz2710.md
+++ b/p8105_hw3_hz2710.md
@@ -51079,7 +51079,7 @@ acc_long %>%
   select(week,day_id,day,hour_id,hour_counts) %>%
   distinct() %>%
   ggplot(aes(x = hour_id, y = hour_counts, color = day, fill = day,alpha = 0.5)) +
-  geom_line() +
+  geom_point() +
   scale_x_continuous(
     breaks = seq(0, 875, by = 25),
     labels = seq(0, 35)) 
@@ -51087,15 +51087,8 @@ acc_long %>%
 
 <img src="p8105_hw3_hz2710_files/figure-gfm/unnamed-chunk-14-1.png" width="90%" />
 
--   acc\_hour= acc\_long %&gt;% mutate( hour\_id =
-    as.integer(round(row\_number()/60) ) ) %&gt;% group\_by(hour\_id)
-    %&gt;% summarise(hour\_counts = sum(counts)) acc\_long %&gt;%
-    mutate( hour\_id = as.integer(round(row\_number()/60) ) ) %&gt;%
-    left\_join(acc\_hour, by = “hour\_id”) %&gt;%
-    select(week,day\_id,day,hour\_id,hour\_counts) %&gt;% distinct()
-    %&gt;% mutate( hour\_id = hour\_id - 24 \* (day\_id-1) ) %&gt;%
-    ggplot(aes(x = hour\_id, y = hour\_counts, color = day, fill =
-    day,alpha = 0.5)) + geom\_line() + scale\_x\_continuous( breaks =
-    seq(0, 50400, by = 1440), labels = seq(0, 35)) + labs(x = “Day of
-    week”, y = “Activity counts”, title = " 24h activity time for each
-    day") \`\`\`
+-   On day 22 and day 29, the counts was extremely low, an abnormal
+    level. The men might forget to wear the devices or something wrong
+    for the devices to get the data or the men had situation for his
+    health. Most of the day, the trend was like a thin downward
+    parabola, reaching the peak at the middle of the day.
